--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "scripts": {
+    "test": "testcafe chrome -c 1 login test.js"
+  },
   "dependencies": {
     "node": "^18.13.0",
     "prettier": "^2.8.3",
